[package]
name = "rmw-speedy"
version = "0.8.3"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/speedy"
homepage = "https://github.com/koute/speedy"
documentation = "https://docs.rs/speedy/*/speedy/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serialization"]
categories = ["encoding"]
description = "A fast binary serialization framework"
edition = "2021"

[dependencies]
speedy-derive = { version = "= 0.8.3", path = "speedy-derive", optional = true }
chrono = { version = "0.4.19", optional = true }
glam = { version = "0.21.2", optional = true }
smallvec = { version = "1.9.0", optional = true }
regex = { version = "1.6.0", optional = true, default-features = false }
uuid = { version = "1.1.2", optional = true, default-features = false }
indexmap = { version = "1.9.1", optional = true }
num-traits = "0.2.15"

[dev-dependencies]
quickcheck = "1.0.3"
paste = "1.0.7"
tempfile = "3.3.0"

[profile.release]
panic = "abort"

[workspace]
members = [".", "speedy-derive", "static-tests"]

[features]
default = ["speedy-derive"]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
