[package]
name = "speedy-derive"
version = "0.3.3"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/speedy"
homepage = "https://github.com/koute/speedy"
documentation = "https://docs.rs/speedy/*/speedy/"
license = "MIT/Apache-2.0"
keywords = ["serialization"]
categories = ["encoding"]
description = "A fast binary serialization framework, #[derive(Readable, Writable)] support"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"
