[package]
name = "speedy-derive"
version = "0.7.1"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/speedy"
homepage = "https://github.com/koute/speedy"
documentation = "https://docs.rs/speedy/*/speedy/"
license = "MIT/Apache-2.0"
keywords = ["serialization"]
categories = ["encoding"]
description = "A fast binary serialization framework, #[derive(Readable, Writable)] support"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = "1"
proc-macro2 = "1"
